package Factory;

public interface Button {

}
