package Factory;

public interface Panel {
    public void addButton(Button button);
}
