package Factory;

public class UnixButton implements  Button {

}
