package Factory;

public class UnixPanel implements Panel{
    @Override
    public void addButton(Button button) {
    }


}
