@startuml
interface Panel{
    +add(button: Button):void
    +draw():void
}

interface Button{
}

class WindowsPanel{
    +add(button: Button):void
    +draw():void
}

class WindowsButton{
}


class UnixPanel{
    +add(button: Button):void
    +draw():void
}

class UnixButton{
}

class WindowsControlFactory{
    +createButton(): Button
    +createPanel(): Panel
}

class UnixControlFactory{
    +createButton(): Button
    +createPanel(): Panel
}


Panel <|.. WindowsPanel
Panel <|.. UnixPanel

Button <|.. WindowsButton
Button <|.. UnixButton

WindowsPanel <.. WindowsControlFactory
WindowsButton <.. WindowsControlFactory
UnixPanel <.. UnixControlFactory
UnixButton <.. UnixControlFactory

@enduml
